# manners

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  manners.cabal  stack.yaml
app/: Main.hs
cli/: LICENSE  README.md  manners.cabal
cli/app/: Main.hs
cli/src/: Pact.hs  Pretty.hs  Runner.hs
cli/test/: PactSpec.hs  ServiceSpec.hs
cli/test/resources/: Hello Consumer-Hello Provider.json  a-b.json
clients/js/manners/: .editorconfig  .jshintrc  README.md  index.js  package.json
clients/js/manners-bin/: README.md  index.js  package.json
clients/js/manners-bin/src/: manners.js
clients/js/manners-bin/support/: install.js
clients/jvm/manners-examples/: pom.xml
clients/jvm/manners-examples/src/main/java/: Main.java
clients/jvm/manners-examples/src/test/java/: MainTest.java
clients/jvm/manners-fake-provider/: .gitignore  README.md  pom.xml
clients/jvm/manners-fake-provider/src/main/kotlin/io/manners/: Domain.kt  FakeProvider.kt  Specification.kt
clients/jvm/manners-fake-provider/src/test/kotlin/io/manners/: Specification.kt
resources/pact_specification_v1.1/testcases/response/status/: different status.json
src/: Pact.hs  Provider.hs  Runner.hs  Service.hs
test/: Main.hs  PactSpec.hs  ServiceSpec.hs
