name:                manners
version:             0.4.0.0
synopsis:            Get your services behaved
description:         Please see README.md
homepage:            http://github.com/mannersio/manners#readme
license:             MIT
license-file:        LICENSE
author:              Damien Klinnert
maintainer:          mail@damienklinnert.de
copyright:           2015 Damien KLinnert
category:            Utility
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Service
                     , Runner
                     , Pact
  other-modules:       Provider
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , http-types
                     , unordered-containers
                     , warp
                     , wai
                     , wai-extra
                     , text
                     , directory
                     , case-insensitive
                     , vector
                     , wreq
                     , lens
                     , stm >=2.4
                     , mtl >=2.2
  default-language:    Haskell2010

executable manners
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  build-depends:       base
                     , manners
  default-language:    Haskell2010

test-suite manners-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       ServiceSpec
                     , PactSpec
  build-depends:       base
                     , manners
                     , bytestring
                     , aeson
                     , wreq
                     , lens
                     , hspec
                     , unordered-containers
                     , heredoc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mannersio/manners
